--- a/module-1/dataframe-calculations/your-code/challenge-1.ipynb
+++ b/module-1/dataframe-calculations/your-code/challenge-1.ipynb
@@ -619,62 +619,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "VenusaurMega Venusaur\n",
-      "CharizardMega Charizard X\n",
-      "CharizardMega Charizard Y\n",
-      "BlastoiseMega Blastoise\n",
-      "BeedrillMega Beedrill\n",
-      "PidgeotMega Pidgeot\n",
-      "AlakazamMega Alakazam\n",
-      "SlowbroMega Slowbro\n",
-      "GengarMega Gengar\n",
-      "KangaskhanMega Kangaskhan\n",
-      "PinsirMega Pinsir\n",
-      "GyaradosMega Gyarados\n",
-      "AerodactylMega Aerodactyl\n",
-      "MewtwoMega Mewtwo X\n",
-      "MewtwoMega Mewtwo Y\n",
-      "Meganium\n",
-      "AmpharosMega Ampharos\n",
-      "SteelixMega Steelix\n",
-      "ScizorMega Scizor\n",
-      "HeracrossMega Heracross\n",
-      "HoundoomMega Houndoom\n",
-      "TyranitarMega Tyranitar\n",
-      "SceptileMega Sceptile\n",
-      "BlazikenMega Blaziken\n",
-      "SwampertMega Swampert\n",
-      "GardevoirMega Gardevoir\n",
-      "SableyeMega Sableye\n",
-      "MawileMega Mawile\n",
-      "AggronMega Aggron\n",
-      "MedichamMega Medicham\n",
-      "ManectricMega Manectric\n",
-      "SharpedoMega Sharpedo\n",
-      "CameruptMega Camerupt\n",
-      "AltariaMega Altaria\n",
-      "BanetteMega Banette\n",
-      "AbsolMega Absol\n",
-      "GlalieMega Glalie\n",
-      "SalamenceMega Salamence\n",
-      "MetagrossMega Metagross\n",
-      "LatiasMega Latias\n",
-      "LatiosMega Latios\n",
-      "RayquazaMega Rayquaza\n",
-      "LopunnyMega Lopunny\n",
-      "GarchompMega Garchomp\n",
-      "LucarioMega Lucario\n",
-      "AbomasnowMega Abomasnow\n",
-      "GalladeMega Gallade\n",
-      "AudinoMega Audino\n",
-      "DiancieMega Diancie\n"
+      "<ipython-input-6-5ceed104313d>:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df[\"Name\"][i] = re.search(\"Mega.+\", df[\"Name\"][i])[0]\n"
      ]
     },
     {
@@ -765,7 +721,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Mega Venusaur</td>\n",
        "      <td>Grass</td>\n",
        "      <td>Poison</td>\n",
        "      <td>625</td>\n",
@@ -829,7 +785,7 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard X</td>\n",
+       "      <td>Mega Charizard X</td>\n",
        "      <td>Fire</td>\n",
        "      <td>Dragon</td>\n",
        "      <td>634</td>\n",
@@ -845,7 +801,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>6</td>\n",
-       "      <td>CharizardMega Charizard Y</td>\n",
+       "      <td>Mega Charizard Y</td>\n",
        "      <td>Fire</td>\n",
        "      <td>Flying</td>\n",
        "      <td>634</td>\n",
@@ -879,47 +835,43 @@
        "</div>"
       ],
       "text/plain": [
-       "   #                       Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
-       "0  1                  Bulbasaur  Grass  Poison    318  45      49       49   \n",
-       "1  2                    Ivysaur  Grass  Poison    405  60      62       63   \n",
-       "2  3                   Venusaur  Grass  Poison    525  80      82       83   \n",
-       "3  3      VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
-       "4  4                 Charmander   Fire     NaN    309  39      52       43   \n",
-       "5  5                 Charmeleon   Fire     NaN    405  58      64       58   \n",
-       "6  6                  Charizard   Fire  Flying    534  78      84       78   \n",
-       "7  6  CharizardMega Charizard X   Fire  Dragon    634  78     130      111   \n",
-       "8  6  CharizardMega Charizard Y   Fire  Flying    634  78     104       78   \n",
-       "9  7                   Squirtle  Water     NaN    314  44      48       65   \n",
+       "   #              Name Type 1  Type 2  Total  HP  Attack  Defense  Sp. Atk  \\\n",
+       "0  1         Bulbasaur  Grass  Poison    318  45      49       49       65   \n",
+       "1  2           Ivysaur  Grass  Poison    405  60      62       63       80   \n",
+       "2  3          Venusaur  Grass  Poison    525  80      82       83      100   \n",
+       "3  3     Mega Venusaur  Grass  Poison    625  80     100      123      122   \n",
+       "4  4        Charmander   Fire     NaN    309  39      52       43       60   \n",
+       "5  5        Charmeleon   Fire     NaN    405  58      64       58       80   \n",
+       "6  6         Charizard   Fire  Flying    534  78      84       78      109   \n",
+       "7  6  Mega Charizard X   Fire  Dragon    634  78     130      111      130   \n",
+       "8  6  Mega Charizard Y   Fire  Flying    634  78     104       78      159   \n",
+       "9  7          Squirtle  Water     NaN    314  44      48       65       50   \n",
        "\n",
-       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
-       "0       65       65     45           1      False  \n",
-       "1       80       80     60           1      False  \n",
-       "2      100      100     80           1      False  \n",
-       "3      122      120     80           1      False  \n",
-       "4       60       50     65           1      False  \n",
-       "5       80       65     80           1      False  \n",
-       "6      109       85    100           1      False  \n",
-       "7      130       85    100           1      False  \n",
-       "8      159      115    100           1      False  \n",
-       "9       50       64     43           1      False  "
+       "   Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65     45           1      False  \n",
+       "1       80     60           1      False  \n",
+       "2      100     80           1      False  \n",
+       "3      120     80           1      False  \n",
+       "4       50     65           1      False  \n",
+       "5       65     80           1      False  \n",
+       "6       85    100           1      False  \n",
+       "7       85    100           1      False  \n",
+       "8      115    100           1      False  \n",
+       "9       64     43           1      False  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
-    "x = re.search(r\"\\W*(Mega)\\W\\w+\", \"Mega Vakdj\")[0]\n",
+    "for i in range(len(df[\"Name\"])):\n",
+    "    if \"Mega\" in df[\"Name\"][i]:\n",
+    "        df[\"Name\"][i] = re.search(\"Mega.+\", df[\"Name\"][i])[0]\n",
     "\n",
-    "#for i in df[\"Name\"]:\n",
-    "    #print (i)\n",
     "\n",
-    "for item in df[\"Name\"]:\n",
-    "    if \"Mega\" in item:\n",
-    "        print (item)\n",
-    "# test transformed data\n",
     "df.head(10)"
    ]
   },
@@ -934,11 +886,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       #                 Name   Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+      "0      1            Bulbasaur    Grass  Poison    318  45      49       49   \n",
+      "1      2              Ivysaur    Grass  Poison    405  60      62       63   \n",
+      "2      3             Venusaur    Grass  Poison    525  80      82       83   \n",
+      "3      3        Mega Venusaur    Grass  Poison    625  80     100      123   \n",
+      "4      4           Charmander     Fire     NaN    309  39      52       43   \n",
+      "..   ...                  ...      ...     ...    ...  ..     ...      ...   \n",
+      "795  719              Diancie     Rock   Fairy    600  50     100      150   \n",
+      "796  719         Mega Diancie     Rock   Fairy    700  50     160      110   \n",
+      "797  720  HoopaHoopa Confined  Psychic   Ghost    600  80     110       60   \n",
+      "798  720   HoopaHoopa Unbound  Psychic    Dark    680  80     160       60   \n",
+      "799  721            Volcanion     Fire   Water    600  80     110      120   \n",
+      "\n",
+      "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  A/D Ratio  \n",
+      "0         65       65     45           1      False   1.000000  \n",
+      "1         80       80     60           1      False   0.984127  \n",
+      "2        100      100     80           1      False   0.987952  \n",
+      "3        122      120     80           1      False   0.813008  \n",
+      "4         60       50     65           1      False   1.209302  \n",
+      "..       ...      ...    ...         ...        ...        ...  \n",
+      "795      100      150     50           6       True   0.666667  \n",
+      "796      160      110    110           6       True   1.454545  \n",
+      "797      150      130     70           6       True   1.833333  \n",
+      "798      170      130     80           6       True   2.666667  \n",
+      "799      130       90     70           6       True   0.916667  \n",
+      "\n",
+      "[800 rows x 14 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "#df[\"A/D Ratio\"] = df[\"Attack\"]/df[\"Defense\"]\n",
+    "def ratiomaker(col1, col2):\n",
+    "    return col1/col2 \n",
+    "\n",
+    "df[\"A/D Ratio\"] = df.apply(lambda x: ratiomaker(x[\"Attack\"], x[\"Defense\"]), axis=1 )\n",
+    "print(df)"
    ]
   },
   {
@@ -950,11 +942,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df[\"A/D Ratio\"].max()"
    ]
   },
   {
@@ -966,11 +970,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.043478260869565216"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df[\"A/D Ratio\"].min()"
    ]
   },
   {
@@ -988,11 +1004,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0       (Grass, Poison)\n",
+      "1       (Grass, Poison)\n",
+      "2       (Grass, Poison)\n",
+      "3       (Grass, Poison)\n",
+      "4                  Fire\n",
+      "             ...       \n",
+      "795       (Rock, Fairy)\n",
+      "796       (Rock, Fairy)\n",
+      "797    (Psychic, Ghost)\n",
+      "798     (Psychic, Dark)\n",
+      "799       (Fire, Water)\n",
+      "Name: Combo Type, Length: 800, dtype: object\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "def combobombo(in1, in2):\n",
+    "    \n",
+    "    if pd.isnull(in1):\n",
+    "        return in2\n",
+    "    elif pd.isnull(in2):\n",
+    "        return in1\n",
+    "    else:\n",
+    "        return (in1, in2)\n",
+    "   \n",
+    "    \n",
+    "df[\"Combo Type\"] = df.apply(lambda x: combobombo(x[\"Type 1\"], x[\"Type 2\"]), axis=1 )\n",
+    "print (df[\"Combo Type\"])"
    ]
   },
   {
@@ -1004,11 +1053,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "429    DeoxysAttack Forme\n",
+       "347              Carvanha\n",
+       "19          Mega Beedrill\n",
+       "453              Cranidos\n",
+       "348              Sharpedo\n",
+       "Name: Name, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df2 = df[\"A/D Ratio\"].sort_values(ascending=False).head()\n",
+    "df[\"Name\"][df2.index]\n"
    ]
   },
   {
@@ -1022,11 +1089,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Psychic', ('Water', 'Dark'), ('Bug', 'Poison'), 'Rock']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "comboList = df[\"Combo Type\"][df2.index].unique().tolist()\n",
+    "print(comboList)"
    ]
   },
   {
@@ -1042,12 +1119,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>A/D Ratio</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Combo Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>(Bug, Poison)</th>\n",
+       "      <td>199.166667</td>\n",
+       "      <td>347.916667</td>\n",
+       "      <td>53.750000</td>\n",
+       "      <td>68.333333</td>\n",
+       "      <td>58.083333</td>\n",
+       "      <td>42.500000</td>\n",
+       "      <td>59.333333</td>\n",
+       "      <td>65.916667</td>\n",
+       "      <td>2.333333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.315989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Psychic</th>\n",
+       "      <td>381.973684</td>\n",
+       "      <td>464.552632</td>\n",
+       "      <td>72.552632</td>\n",
+       "      <td>64.947368</td>\n",
+       "      <td>67.236842</td>\n",
+       "      <td>98.552632</td>\n",
+       "      <td>82.394737</td>\n",
+       "      <td>78.868421</td>\n",
+       "      <td>3.342105</td>\n",
+       "      <td>0.236842</td>\n",
+       "      <td>1.164196</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rock</th>\n",
+       "      <td>410.111111</td>\n",
+       "      <td>409.444444</td>\n",
+       "      <td>67.111111</td>\n",
+       "      <td>103.333333</td>\n",
+       "      <td>107.222222</td>\n",
+       "      <td>40.555556</td>\n",
+       "      <td>58.333333</td>\n",
+       "      <td>32.888889</td>\n",
+       "      <td>3.888889</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>1.260091</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>(Water, Dark)</th>\n",
+       "      <td>347.666667</td>\n",
+       "      <td>493.833333</td>\n",
+       "      <td>69.166667</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>65.166667</td>\n",
+       "      <td>88.833333</td>\n",
+       "      <td>63.500000</td>\n",
+       "      <td>87.166667</td>\n",
+       "      <td>3.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.291949</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        #       Total         HP      Attack     Defense  \\\n",
+       "Combo Type                                                                 \n",
+       "(Bug, Poison)  199.166667  347.916667  53.750000   68.333333   58.083333   \n",
+       "Psychic        381.973684  464.552632  72.552632   64.947368   67.236842   \n",
+       "Rock           410.111111  409.444444  67.111111  103.333333  107.222222   \n",
+       "(Water, Dark)  347.666667  493.833333  69.166667  120.000000   65.166667   \n",
+       "\n",
+       "                 Sp. Atk    Sp. Def      Speed  Generation  Legendary  \\\n",
+       "Combo Type                                                              \n",
+       "(Bug, Poison)  42.500000  59.333333  65.916667    2.333333   0.000000   \n",
+       "Psychic        98.552632  82.394737  78.868421    3.342105   0.236842   \n",
+       "Rock           40.555556  58.333333  32.888889    3.888889   0.111111   \n",
+       "(Water, Dark)  88.833333  63.500000  87.166667    3.166667   0.000000   \n",
+       "\n",
+       "               A/D Ratio  \n",
+       "Combo Type                \n",
+       "(Bug, Poison)   1.315989  \n",
+       "Psychic         1.164196  \n",
+       "Rock            1.260091  \n",
+       "(Water, Dark)   2.291949  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "comboDf = df[df[\"Combo Type\"].isin(comboList)]\n",
+    "agrupado = comboDf.groupby(['Combo Type']).mean()\n",
+    "agrupado"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
